<resources>
    <string name="app_name">Shopping List</string>
    <string name="coming_soon">Functionality coming soon !</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="not_registred">Not registred yet ?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="register_success">You were successfully registered</string>
    <string name="register_fail">Registration failed</string>
    <string name="login_success">You were successfully logged in</string>
    <string name="login_fail">Wrong credentials</string>
    <string name="login_failure">Login failed</string>
    <string name="action_logout">Log out</string>
    <string name="get_list_failure">List could not be retrieved</string>
    <string name="new_list">New list</string>
    <string name="add_list">Create this list</string>
    <string name="add_list_success">List was successfully added</string>
    <string name="add_list_failure">List could not be added</string>
    <string name="del_list_success">List was successfully deleted</string>
    <string name="del_list_failure">List could not be deleted</string>
    <string name="del_list">Delete this list</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title_activity_list2">Items</string>
    <string name="new_item">New item</string>
    <string name="item_name">Item name</string>
    <string name="item_qty">Quantity</string>
    <string name="item_price">Price ($)</string>
    <string name="add_item">Add this item to the list</string>
    <string name="add_item_success">Item successfully added</string>
    <string name="edit_item_success">Item successfully edited</string>
    <string name="del_item_success">Item successfully deleted</string>
    <string name="add_item_failure">Item could not be added</string>
    <string name="edit_item_failure">Item could not be edited</string>
    <string name="del_item_failure">Item could not be deleted</string>
    <string name="empty_items">No items in this list yet !</string>
    <string name="empty_lists">No list to show yet !</string>
</resources>
