<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esgi.freres.androidproject.Fragments.CreateItemFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewItemName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/new_item"
            android:ems="10"
            android:id="@+id/editTextItemName" />

        <TextView
            android:text="@string/item_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewItemQty" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextItemQty" />

        <TextView
            android:text="@string/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewItemPrice" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextItemPrice" />

        <Button
            android:text="@string/add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addItem" />
    </LinearLayout>

</FrameLayout>