<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.freres.androidproject.Fragments.RegisterFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFirstName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:ems="10"
        android:id="@+id/editTextFirstName" />

    <TextView
        android:text="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLastName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:ems="10"
        android:id="@+id/editTextLastName" />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/editTextEmail" />

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword" />

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit" />
    </LinearLayout>
</FrameLayout>