<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esgi.freres.androidproject.Fragments.ItemFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditItemName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/new_item"
            android:ems="10"
            android:id="@+id/editTextEditItemName" />

        <TextView
            android:text="@string/item_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditItemQty" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextEditItemQty" />

        <TextView
            android:text="@string/item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditItemPrice" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editTextEditItemPrice" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/buttonEditItem"
                android:layout_marginLeft="77dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="77dp" />

            <Button
                android:text="@string/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteItem"
                android:layout_alignBaseline="@+id/buttonEditItem"
                android:layout_alignBottom="@+id/buttonEditItem"
                android:layout_toRightOf="@+id/buttonEditItem"
                android:layout_toEndOf="@+id/buttonEditItem"
                android:layout_marginLeft="77dp"
                android:layout_marginStart="77dp" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>