<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.esgi.freres.androidproject.Fragments.LoginFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/container">

        <TextView
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewLogin" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/editTextLogin" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/password" />

        <Button
            android:text="@string/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit" />

        <TextView
            android:text="@string/not_registred"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:clickable="true"/>
    </LinearLayout>
</FrameLayout>